syntax = "proto3";

package stats.message.recommendation;

option java_multiple_files = true;
option java_package = "ru.practicum.grpc.stats.recommendation";

message InteractionsCountRequestProto {
  repeated int64 event_id = 1; // идентификаторы мероприятий, для которых нужно вернуть сумму всех взаимодействий
}