syntax = "proto3";

package stats.message.recommendation;

option java_multiple_files = true;
option java_package = "ru.practicum.grpc.stats.recommendation";

message UserPredictionsRequestProto {
  int64 user_id = 1;
  int64 max_results = 2;
}